# grin3

./: .editorconfig  .gitignore  .hgignore  .hgtags  ANNOUNCE.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  THANKS.txt  Vagrantfile  grin.py  pyproject.toml  setup.cfg  setup.py  tox.ini  vagrant.sh
examples/: grin  grind  grinimports.py  grinpython.py
grin/: __init__.py  colors.py  datablock.py  grin.py  grind.py  main.py  options.py  recognizer.py  utils.py
tests/: test_file_recognizer.py  test_grep.py
