[nosetests]
with-doctest=1
doctest-tests=1

[wheel]
universal = 0

[bdist_wheel]
universal = 0

[metadata]
description-file = README.rst

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
ignore = E501,W503,E203
max-line-length = 88
select = C,E,F,W,B,B950

[isort]
combine_as_imports = true
default_section = THIRDPARTY
force_grid_wrap=0
include_trailing_comma=True
indent = 4
line_length=88
multi_line_output=3
not_skip = __init__.py
use_parentheses=True
