[nosetests]
with-doctest=1
doctest-tests=1

[wheel]
universal = 0

[bdist_wheel]
universal = 0

[metadata]
description-file = README.rst

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
# E203 doesn't work for slicing
# W503 talks about operator formatting which is too opinionated.
ignore = E203, W503, C819
max-complexity = 18
max-line-length = 120
select = B,C,E,F,W,T4,B9

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
indent = 4
line_length = 120
multi_line_output = 3
use_parentheses = True
