[metadata]
name = grin3
version = attr: grin.__version__
url = https://pypi.org/project/grin3/
project_urls =
    Github = https://github.com/rsalmaso/grin3
    Gitlab = https://gitlab.com/rsalmaso/grin3
author = Robert Kern
author_email = robert.kern@enthought.com
maintainer = Raffaele Salmaso
maintainer_email = raffaele@salmaso.org
description = A grep program configured the way I like it. (python3 port)
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
python_requires = >=3.5
packages =
    grin

[options.entry_points]
console_scripts =
    grin = grin.grin:main
    grind = grin.grind:main

[wheel]
universal = 0

[bdist_wheel]
universal = 0

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
# E203 doesn't work for slicing
# W503 talks about operator formatting which is too opinionated.
ignore = E203, W503, C819
max-complexity = 18
max-line-length = 120
select = B,C,E,F,W,T4,B9

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
indent = 4
line_length = 120
multi_line_output = 3
use_parentheses = True
